# Taisu2

./: .gitignore
data_preprocess/: audio_caption_archive.py
data_preprocess/image-alttext/: image_alttext_pairs_statistics.py  image_alttext_sampling.py  image_pixel_filter.py  (+10 more)
scripts/: accelerator_cfg.json  multinode_hostfile  taisu2_internvl3_recaption.sh
scripts_internvl/: finetune_internvit6b_224to336_vicuna13b.sh  finetune_internvit6b_224to336_vicuna13b_custom_data.sh  finetune_internvit6b_224to336_vicuna7b.sh  finetune_internvit6b_448_v1_2_vicuna13b.sh  finetune_internvit6b_448_v1_5_vicuna13b.sh  finetune_internvit6b_448_vicuna13b.sh  finetune_internvit6b_448_vicuna7b.sh  pretrain_internvit6b_224to336_vicuna13b.sh  pretrain_internvit6b_224to336_vicuna7b.sh  pretrain_internvit6b_448_v1_2_vicuna13b.sh  pretrain_internvit6b_448_v1_5_vicuna13b.sh  pretrain_internvit6b_448_vicuna13b.sh  pretrain_internvit6b_448_vicuna7b.sh
scripts_taisu2/: taisu2_internvl3_recaption.sh
taisu2/: pyproject.toml
taisu2/llava/: __init__.py  constants.py  conversation.py  mm_utils.py  multifile_tariterators.py  taisu2_preprocess.py
taisu2/llava/data_synthesis/: recaption_vqa_mcq.py
taisu2/llava/inference/: recaption.py  taisu2_recaption.py
taisu2/llava/model/: __init__.py  builder.py  llava_arch.py
taisu2/llava/model/language_model/: llava_llama.py  llava_mpt.py
taisu2/llava/model/multimodal_encoder/: builder.py  clip_encoder.py
taisu2/llava/model/multimodal_encoder/eva_clip/: configuration_evaclip.py  modeling_evaclip.py
taisu2/llava/model/multimodal_encoder/intern_vit/: modeling_intern_vit.py
taisu2/llava/model/multimodal_encoder/intern_vit_6b/: configuration_intern_vit.py
taisu2/llava/model/multimodal_encoder/internvl_14b/: __init__.py  configuration_internvl.py  flash_attention.py  modeling_intern_vit.py  modeling_internvl.py  modeling_qllama.py
taisu2/llava/model/multimodal_model/internvl2_5/: configuration_internvl_chat.py  modeling_internvl_chat.py
taisu2/llava/model/multimodal_projector/: builder.py
taisu2/llava/serve/: gradio_web_server.py  model_worker.py
taisu2/llava/taisu2_prompts/: taisu2_gronding_prompt.txt
taisu2/llava/train/: __init__.py  dist_utils.py  llama_flash_attn_monkey_patch.py  llava_trainer.py  train.py  train_mem.py
taisu2/prompts/: caption_prompt.txt  ocr_prompt.txt
taisu2/scripts/: ds_hostfile  multinode_hostfile  taisu2_internvl3_recaption.sh  taisu2_internvl3_recaption_train.sh  taisu2_train.sh  vlmevalkit.sh  vlmevalkit_cfg.json  zero1.json
taisu2/scripts/eval/: gqa.sh  pope.sh  vqav2.sh
taisu2/scripts/inference/: taisu2_internvl3_recaption.sh  taisu2_recaption.sh  taisu2_recaption_vqa_mcq.sh
(+11 files in other folders)
