[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.3"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.4.1+cu118", "torchvision==0.19.1+cu118",
    "transformers==4.51.3", "tokenizers==0.21.1", "sentencepiece==0.2.0", "shortuuid",
    "accelerate==1.6.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.6.1",
    "gradio==5.29.1", "gradio_client==1.10.1",
    "requests", "httpx==0.28.1", "uvicorn", "fastapi",
    "einops==0.8.1", "einops-exts==0.0.4", "timm==1.0.15",
    "webdataset==0.2.111",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/miznchimaki/Taisu2"
"Bug Tracker" = "https://github.com/miznchimaki/Taisu2/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
