[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.3"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision",
    "transformers", "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn",
    "gradio", "gradio_client",
    "requests", "httpx", "uvicorn", "fastapi",
    "einops", "einops-exts", "timm",
    "webdataset",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/miznchimaki/Taisu2"
"Bug Tracker" = "https://github.com/miznchimaki/Taisu2/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
